# PEA-C-

PEA/PEA_zad2/: CMakeLists.txt  README.txt
PEA/PEA_zad2/AlgorytmyBB/: BB.cpp  BB.h
PEA/PEA_zad2/Utilities/: Utilities.cpp
PEA/PEA_zad2/Utilities/Czasomierz/: Timer.cpp  Timer.h
PEA/PEA_zad2/files/: 1.txt  result1_3-8_asymmetric.xls  result_3-8_asymmetric.xls  result_3-9_asymmetric.xls
PEA/PEA_zad3/: CMakeLists.txt
PEA/PEA_zad3/input/: ExampleConfigFile.txt  config.txt  wyniki.txt  wyniki_99.txt  wyniki_strategy_0.txt  wyniki_strategy_2.txt
PEA/PEA_zad3/utilities/SA/: SimulatedAnnealing.h
PEA/PEA_zad3/utilities/parser/: Parser.cpp
PEA/PEA_zad3/utilities/structure/: Matrix.h
PEA/PEA_zad4/: CMakeLists.txt  main.cpp
PEA/PEA_zad4/binding/: genetic_tsp_binding.cpp
PEA/PEA_zad4/cpp/App/: App.h
PEA/PEA_zad4/cpp/Genetic/: genetic_tsp.cpp
PEA/PEA_zad4/cpp/Input/: ExampleConfigFile.txt
PEA/PEA_zad4/cpp/Input/mlruns/0/05283f4c10e143d096bd819618e330b7/: meta.yaml
PEA/PEA_zad4/cpp/Utilities/Matrix/: Structure.h
PEA/PEA_zad4/mlruns/0/: meta.yaml
PEA/PEA_zad4/mlruns/0/005509b8d98b48d48ebab7c67cd82716/: meta.yaml
PEA/PEA_zad4/mlruns/0/005509b8d98b48d48ebab7c67cd82716/tags/: mlflow.runName
PEA/PEA_zad4/mlruns/0/1a3c664e23634645b05a6a33f6dcb9e6/tags/: mlflow.runName
PEA/PEA_zad4/mlruns/0/1a5d6a050603426db9e7fbda8403c66b/: meta.yaml
PEA/PEA_zad4/mlruns/0/2264f48884f949af9c2672f27f3c5246/: meta.yaml
PEA/PEA_zad4/mlruns/0/2264f48884f949af9c2672f27f3c5246/tags/: mlflow.parentRunId
PEA/PEA_zad4/mlruns/0/2adad32c7a2c4aa9abc03cea0de791ae/: meta.yaml
PEA/PEA_zad4/mlruns/0/2adad32c7a2c4aa9abc03cea0de791ae/tags/: mlflow.runName
PEA/PEA_zad4/mlruns/0/45c3870c0d9145b190ab58fa0b527f4e/tags/: mlflow.parentRunId  mlflow.runName
PEA/PEA_zad4/mlruns/0/79c796c25c3e4b1a93a546f4067dab81/tags/: mlflow.runName
PEA/PEA_zad4/mlruns/0/8e8d1154c42d4774bb60f24a30ed3d6f/: meta.yaml
PEA/PEA_zad4/mlruns/0/91c871c8594440d38d01769454b1ab7a/: meta.yaml
PEA/PEA_zad4/mlruns/0/91c871c8594440d38d01769454b1ab7a/params/: crossover_rate
PEA/PEA_zad4/mlruns/0/91c871c8594440d38d01769454b1ab7a/tags/: mlflow.parentRunId
PEA/PEA_zad4/mlruns/0/9a1180b6c2c548f79f32fc21b3899a8f/tags/: mlflow.runName
PEA/PEA_zad4/mlruns/0/b4a72fe598304c838c35d4d0076434ab/: meta.yaml
PEA/PEA_zad4/mlruns/0/b4a72fe598304c838c35d4d0076434ab/tags/: mlflow.runName
PEA/PEA_zad4/mlruns/0/d535a1e72fbe45dcb9b8f90efe0e36c3/: meta.yaml
PEA/PEA_zad4/mlruns/0/d535a1e72fbe45dcb9b8f90efe0e36c3/tags/: mlflow.runName
PEA/PEA_zad4/mlruns/0/dc95c9be8fc84f1293c42ac59dbdfb23/: meta.yaml
PEA/PEA_zad4/mlruns/0/e942b2fc83ff41db97ec05b38c934ff0/: meta.yaml
PEA/PEA_zad4/mlruns/0/f4a3e79a8f954a9889b5de67d0e5f76e/: meta.yaml
PEA/PEA_zad4/mlruns/0/f4a3e79a8f954a9889b5de67d0e5f76e/tags/: mlflow.parentRunId  mlflow.runName
PEA/PEA_zad4/mlruns/0/fa852f8b1ae74665b61d6b0479c32219/: meta.yaml
PEA/PEA_zad4/mlruns/0/fd80dd8e7eff4b7d94531d13b8f89a68/: meta.yaml
PEA/PEA_zad4/mlruns/0/fdc98355d89f4feaacf2b88d2acf0681/: meta.yaml
PEA/PEA_zad4/mlruns/0/fdc98355d89f4feaacf2b88d2acf0681/tags/: mlflow.parentRunId  mlflow.runName
PEA/PEA_zad4/mlruns/685262374549014228/: meta.yaml
PEA/PEA_zad4/mlruns/685262374549014228/90e355bf7a3e40a985cda449678bf80c/: meta.yaml
PEA/PEA_zad4/mlruns/685262374549014228/ad5ae496157044bfab72e40347d52828/: meta.yaml
PEA/PEA_zad4/mlruns/685262374549014228/c2fc66cb68b241f6b85cb32007e28926/: meta.yaml
PEA/PEA_zad4/mlruns/685262374549014228/d7585dbcc94442cda69d2a445b700129/: meta.yaml
PEA_zad1/: CMakeLists.txt  main.cpp
PEA_zad1/Algorytmy/: BruteForceA.h  RandomA.cpp
PEA_zad1/Aplikacja/: Application.cpp
PEA_zad1/Utilities/Permutation/: Permutation.cpp  Permutation.h
PEA_zad4_v2/: CMakeLists.txt  main.cpp
PEA_zad4_v2/cpp/App/: App.cpp
PEA_zad4_v2/cpp/Genetic/: genetic_tsp.cpp  genetic_tsp.h
PEA_zad4_v2/cpp/Input/: ExampleConfigFile.txt  ftv47.xml
PEA_zad4_v2/cpp/Tests/: Test.cpp
PEA_zad4_v2/cpp/Utilities/pugixml/: pugixml.cpp
(+122 files in other folders)
